--- a/src/components/Logo/styles.css
+++ b/src/components/Logo/styles.css
@@ -1,5 +1,8 @@
 @import '../../assets/fonts/lobster.css';
 
 .logo {
-    font-family: 'Lobster'
+    font-family: 'Lobster';
+    letter-spacing: 1px;
+    color: #fff;
+    font-size: 30px;
 }
