--- a/src/components/Slogan/styles.css
+++ b/src/components/Slogan/styles.css
@@ -2,10 +2,11 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
 }
 
 .slogan .lead {
-    font-size: 50px;
+    font-size: 30px;
+    text-shadow: 0 1px 2px rgba(51,51,51,0.33);
 }
