Fix global text/link colors; Container can or cannot have image on bg; Fixed input with text to have an anchor instead of button; Logo have dark theme for white backgrounds; New screen for product registration;

--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -17,6 +17,7 @@
     padding: 10px 20px;
     text-decoration: none;
     transition: color 0.1s linear;
+    color: #fff;
 }
 
 .header-main .nav li a:hover {
