--- a/src/components/InputWithText/styles.css
+++ b/src/components/InputWithText/styles.css
@@ -5,11 +5,13 @@
     border-radius: 0 15px 15px 0;
     background-color: #40b957;  
     transition: all 0.25s;
-    display: inline-block;
+    display: flex;
+    align-items: center;
     padding: 0 26px;
     height: 48px;
     font-size: 16px;
     font-weight: bold;
+    text-decoration: none;
 }
 
 .input-with-text-input {
