--- a/src/components/Container/styles.css
+++ b/src/components/Container/styles.css
@@ -5,7 +5,7 @@
     padding: 0 10%;
 }
   
-.container::before {
+.container.has-image::before {
     content: '';
     position: absolute;
     left: 0;
@@ -19,7 +19,7 @@
     z-index: -2;
 }
   
-.container::after {
+.container.has-image::after {
     content: "";
     position: absolute;
     left: 0;
