--- a/src/components/Editor/styles.css
+++ b/src/components/Editor/styles.css
@@ -26,6 +26,7 @@
     flex: 2;
     /*flex-direction: column-reverse;*/
     flex-direction: row;
+    justify-content: flex-end;
     text-align: right;
 }
 
