--- a/src/components/Button/styles.css
+++ b/src/components/Button/styles.css
@@ -40,6 +40,11 @@
     /* background-color: #639b6d; */
 }
 
+.button-login{
+    width:100%;
+    text-align: center;
+}
+
 .button-cta {
     margin: 0;
     margin-top: 40px;
