--- a/src/components/Input/styles.css
+++ b/src/components/Input/styles.css
@@ -7,6 +7,10 @@
   margin:7px 0;
 }
 
+.input-shipping-wrapper{
+  width:48%;
+}
+
 .input {
     border: 0;
     border: 1px solid rgba(148, 150, 152, 0.507);
