--- a/src/screens/SteperProduct/styles.css
+++ b/src/screens/SteperProduct/styles.css
@@ -13,6 +13,7 @@
 }
 
 .topbar{
+    width: 100%;
     margin-bottom: 10px;
     color: black;
     display: flex;
@@ -40,6 +41,7 @@
 }
 
 .box{
+    width: 100%;
     border: 1px solid #e7e7e7;
     border-radius: 5px;
     display: flex;
